[gd_scene load_steps=5 format=3 uid="uid://gccvxlhfj2lm"]

[ext_resource type="Script" uid="uid://7w762sn16rtk" path="res://Main Game/game.gd" id="1_yqv8y"]
[ext_resource type="Script" uid="uid://duor6bnkodj4w" path="res://Main Game/UIs/lobby_ui.gd" id="2_vnwly"]

[sub_resource type="LabelSettings" id="LabelSettings_fpbmt"]
font_size = 64
outline_size = 15
outline_color = Color(0, 0, 0, 1)
shadow_size = 16
shadow_color = Color(0.424834, 0.00174869, 0.990689, 1)

[sub_resource type="LabelSettings" id="LabelSettings_yqv8y"]
font_size = 36

[node name="Game" type="Node"]
script = ExtResource("1_yqv8y")

[node name="GameZone" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("uid://j5bbvw08b7hk")
spawn_path = NodePath("../GameZone")

[node name="HostUI" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="HostUI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Start Game" type="Button" parent="HostUI/Control"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -48.0
offset_right = 120.0
grow_vertical = 0
text = "Start Game"

[node name="MenuUI" type="CanvasLayer" parent="."]
visible = false

[node name="Multiplayer" type="Control" parent="MenuUI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
metadata/_edit_use_anchors_ = true

[node name="Menu Title" type="Label" parent="MenuUI/Multiplayer"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 60.0
grow_horizontal = 2
text = "Deeper Into the Game"
label_settings = SubResource("LabelSettings_fpbmt")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Host" type="Button" parent="MenuUI/Multiplayer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -66.0
offset_top = -24.0
offset_right = 54.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
text = "Host"
metadata/_edit_use_anchors_ = true

[node name="Join" type="Button" parent="MenuUI/Multiplayer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -66.0
offset_top = 36.0
offset_right = 54.0
offset_bottom = 66.0
grow_horizontal = 2
grow_vertical = 2
text = "Join"
metadata/_edit_use_anchors_ = true

[node name="Host Server IP" type="LineEdit" parent="MenuUI/Multiplayer"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 450.0
offset_top = 420.0
offset_right = 690.0
offset_bottom = 451.0
metadata/_edit_use_anchors_ = true

[node name="label" type="Label" parent="MenuUI/Multiplayer/Host Server IP"]
layout_mode = 0
offset_top = 30.0
offset_right = 240.0
offset_bottom = 60.0
text = "Enter host's IP here"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Username Entry" type="LineEdit" parent="MenuUI/Multiplayer"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_top = 0.0925926
anchor_bottom = 0.0925926
offset_left = 450.0
offset_top = 420.0
offset_right = 690.0
offset_bottom = 451.0
metadata/_edit_use_anchors_ = true

[node name="label" type="Label" parent="MenuUI/Multiplayer/Username Entry"]
layout_mode = 0
offset_top = 30.0
offset_right = 240.0
offset_bottom = 60.0
text = "Enter your desired username"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="LobbyUI" type="CanvasLayer" parent="."]
script = ExtResource("2_vnwly")

[node name="Control" type="Control" parent="LobbyUI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Players" type="Label" parent="LobbyUI/Control"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 90.0
grow_horizontal = 2
text = "Players: 0"
label_settings = SubResource("LabelSettings_yqv8y")
horizontal_alignment = 1
vertical_alignment = 1

[node name="RedTeam" type="CheckBox" parent="LobbyUI/Control"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -132.0
offset_top = -60.0
grow_horizontal = 0
grow_vertical = 0
text = "Red alliance"

[node name="BlueTeam" type="CheckBox" parent="LobbyUI/Control"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -132.0
offset_top = -138.0
offset_bottom = -78.0
grow_horizontal = 0
grow_vertical = 0
text = "Blue alliance"

[node name="Alliances Listing" type="Control" parent="LobbyUI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Red Alliance Container" type="VBoxContainer" parent="LobbyUI/Alliances Listing"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 300.0
grow_vertical = 2
mouse_filter = 2
theme_override_constants/separation = 16

[node name="Blue Alliance Container" type="VBoxContainer" parent="LobbyUI/Alliances Listing"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -312.0
grow_horizontal = 0
grow_vertical = 2
mouse_filter = 2
theme_override_constants/separation = 16

[connection signal="pressed" from="MenuUI/Multiplayer/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="MenuUI/Multiplayer/Join" to="." method="_on_join_pressed"]
[connection signal="toggled" from="LobbyUI/Control/RedTeam" to="LobbyUI" method="_on_red_team_toggled"]
[connection signal="toggled" from="LobbyUI/Control/BlueTeam" to="LobbyUI" method="_on_blue_team_toggled"]
